<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/git_image_view"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/git_image"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>

    <TextView
        android:id="@+id/git_username_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/git_image_view"
        android:text="@string/git_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/git_url_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/git_username_view"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/git_image_view"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/git_url" />

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/git_url_view"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/git_image_view">

        <Button
            android:id="@+id/git_favourite"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/favorite"
            android:textSize="12sp" />

        <Button
            android:id="@+id/git_share"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share"
            android:textSize="12sp" />
    </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>